video & Cards Add--4th Sec

--- a/index.html
+++ b/index.html
@@ -80,5 +80,58 @@
     </div>
     </div>
     
+<!-- Assignment 3rd Part -->
+
+ <div class="MyInspire">
+    <div class="First-content">
+        <h2>My Inspiration</h2><br>
+        <p>My inspiration comes from innovative thinkers and creators<br> who drive progress and spark new ideas.</p><br>
+        </div>
+
+<div> 
+        <video class="video" src="video.mp4" controls></video>
+
+    </div>
+
+ </div>
+
+<!-- Assignment Cards--4th Part -->
+
+<div class="cc"> 
+    <h1>My Current Target</h1><br>
+            <p> learning more about it, such as HTML, CSS, JavaScript.</p>
+</div><br>
+
+<div class="card-container">
+    
+    <div class="card1">
+        <img src="./assets/html.png" alt="Card Image 1"> 
+        <div class="card-content">
+            <br><h3>HTML</h3><br>
+            <p>This is a description for the first card. It gives a brief .</p><br>
+            <a href="https://www.w3schools.com/html">Read More</a>
+        </div>
+    </div>
+    <div class="card2">
+        <img src="./assets/css.png" alt="Card Image 2">
+        <div class="card-content">
+            <br> <h3>CSS</h3><br>
+            <p>This is a description for the second card. It provides some icons .</p><br><br>
+            <a href="https://www.w3schools.com/css">Read More</a>
+        </div>
+    </div>
+    <div class="card3">
+        <img src="./assets/js.png" alt="Card Image 3">
+        <div class="card-content">
+            <br> <h3>JavaScript</h3><br>
+            <p>This is a description for the third card. It highlights the main  card.</p><br>
+            <a href="https://learnjavascript.online">Read More</a>
+        </div>
+    </div>
+</div>
+
+
+
+
 </body>
 </html>
