Next Target --Optinals parts

--- a/index.html
+++ b/index.html
@@ -131,6 +131,40 @@
 </div>
 
 
+ <!-- Next Target -->
+ <br><br>
+ <div class="cc"> 
+    <h1>My Next Target</h1><br>
+            <p> learning more about it, such as ReactJS,MongoDB,ExpressJS & NodeJS.</p><br>
+</div><br>
+ <div class="card-container2">
+    <div class="card4">
+        <img src="./assets/react.png" alt="Card Image 4"> 
+        <div class="card-content">
+            <br><h3>ReactJS</h3><br>
+            <p>This is a description for the first card. It gives a brief .</p><br>
+            <a href="https://react.dev/learn">Read More</a>
+        </div>
+    </div>
+    <br>
+    <div class="card5">
+        <img src="./assets/nodejs.png" alt="Card Image 5">
+        <div class="card-content">
+            <br> <h3>NodeJS</h3><br>
+            <p>This is a description for the second card. It provides some icons .</p><br>
+            <a href="https://nodejs.org/en/learn/getting-started/introduction-to-nodejs">Read More</a>
+        </div>
+    </div><br>
+    <div class="card6">
+        <img src="./assets/mongodb.png" alt="Card Image 6">
+        <div class="card-content">
+            <br> <h3>MongoDB</h3><br>
+            <p>This is a description for the third card. It highlights the main  card.</p><br>
+            <a href="https://learn.mongodb.com/learning-paths/introduction-to-mongodb">Read More</a>
+        </div>
+    </div>
+</div>
+
 
 
 </body>
