Submit Form --add

--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@
     </div>
 </div>
 
+<!-- Last One Section  -->
+
+<section class="background-section" id="background-section">
+     
+    <h3>I need Support</h3>
+    <p>If I can't understand any session,then I can take a help session.</p><br>
+    <form action="#input" method="get">
+        <input type="text" placeholder=  "  Enter your text here">
+    <button type="submit">Submit</button>
+    
+    </form>
+</section>
 
 
 </body>
